tests/common/snapshots/sevenzip__common__tests__sevenzip.rs:7:5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: ~
  success: true
  extractor: 7zz
  do_not_recurse: false
  output_directory: "[output_directory]"
